替换不安全方法
Signed-off-by: HiCooper <294237781@qq.com>